--- a/seba.html
+++ b/seba.html
@@ -164,7 +164,7 @@
       </div>
     </section>
 
-    <a href="/VA/public/index.html">
+    <a href="/VA/public/chat.html">
       <div class="card">
         <div class="icon">🗣️</div>
         <div class="details">
