--- a/seba.html
+++ b/seba.html
@@ -172,6 +172,20 @@
         </div>
       </div>
     </a>
+    <br />
+    <div class="card">
+      <div class="form">
+        <form action="https://formsubmit.co/aagg3992@gmail.com" method="POST">
+          <div class="form-group">
+           
+          <div class="form-group">
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" rows="5"></textarea>
+          </div>
+          <button type="submit" class="btn">Send Message</button>
+        </form>
+      </div>
+    </div>
 
     <!-- Bottom Navigation -->
     <footer class="footer">
